--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-
+        <p>This site was created by Geeth Kavinda. It uses data from mapbox.com and api.weatherstack.com</p>
         <img class="portrait" src="/img/me.jpg" alt="">
     </div>
     
